adjusting half-width img fixes wrapping

--- a/assets/styles/layouts/_portfolio-project.scss
+++ b/assets/styles/layouts/_portfolio-project.scss
@@ -442,10 +442,10 @@
 
 		.img--half-width {
 			img {
-		    width: 49%;
+		    width: 48%;
 		    //float: left;
 		    //padding: 0 1% 2% 0;
-				margin-top: 1em;
+				margin-top: 2em;
 			}
 			img:nth-child(even) {
 				float: right;
